# alacritty-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.sh  neovim_demo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: alacritty_manager.rs  lib.rs  main.rs  mcp_server.rs  neovim_context.rs  types.rs
tests/: functional_tests.rs  integration_tests.rs  neovim_integration_tests.rs  unit_tests.rs
